--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
   "license": "MIT",
   "devDependencies": {
     "@types/eslint": "^8.4.10",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.33.0",
+    "jest": "^29.4.1",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
